--- a/_config.yml
+++ b/_config.yml
@@ -18,4 +18,4 @@ description: >
   <a href="https://dev.to/rollendxavier">Dev.to</a><br>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0
+google_analytics: G-JFKG7QZ1RW
